security_groups.tf
locals {
  public_cidr_blocks = [for subnet in local.subnet_list : subnet.subnet if subnet.type == "public"]
}

resource "aws_security_group" "allow_80" {
  vpc_id = aws_vpc.main.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = local.public_cidr_blocks
  }
}

resource "aws_security_group" "allow_443" {
  vpc_id = aws_vpc.main.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = local.public_cidr_blocks
  }
}
